# cc-meta-aprendizagem-2026.1

./: .gitignore  README.md  main.py  pyproject.toml  rank_correlation_measures.py
Example 1/: Example1.ipynb
Example 2/: Example2.ipynb
Example 3/: classifier_performances.csv  dataset_meta_features.csv
Example 3/datasets/: BachChoralHarmony.csv  Corporate_Credit.csv  Fetal_cardiotocography_dataset.csv  KDDCup99_seed_0_nrows_2000_nclasses_10_ncols_100_stratify_True.csv  KDDCup99_seed_1_nrows_2000_nclasses_10_ncols_100_stratify_True.csv  KDDCup99_seed_2_nrows_2000_nclasses_10_ncols_100_stratify_True.csv  KDDCup99_seed_3_nrows_2000_nclasses_10_ncols_100_stratify_True.csv  KDDCup99_seed_4_nrows_2000_nclasses_10_ncols_100_stratify_True.csv  autoUniv-au6-1000.csv  autoUniv-au6-750.csv  cardiotocography.csv  dailybike.csv  dionis_seed_2_nrows_2000_nclasses_10_ncols_100_stratify_True.csv  dionis_seed_3_nrows_2000_nclasses_10_ncols_100_stratify_True.csv  dionis_seed_4_nrows_2000_nclasses_10_ncols_100_stratify_True.csv  first-order-theorem-proving.csv  first-order-theorem-proving_seed_0_nrows_2000_nclasses_10_ncols_100_stratify_True.csv  first-order-theorem-proving_seed_2_nrows_2000_nclasses_10_ncols_100_stratify_True.csv  first-order-theorem-proving_seed_3_nrows_2000_nclasses_10_ncols_100_stratify_True.csv  one-hundred-plants-margin.csv  (+6 more)
Example 4/: Example4.ipynb  classifier_performances.csv  dataset_meta_features.csv
Example 4 - AG/: projeto.ipynb
Exemplo 3/: Example3.ipynb  meta_base_performance_final.csv
article/: README.md  code.ipynb  dataset.ipynb
(+48 files in other folders)
