[project]
name = "cc-meta-aprendizagem-2026-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openml>=0.15.1",
    "pulp>=3.3.2",
    "pymfe>=0.4.4",
    "seaborn>=0.13.2",
    "unidecode>=1.4.0",
]
